# ChangeLog for mail-filter/afew-aidecoe
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org>
  afew-aidecoe-9999.ebuild:
  Require 'python' flag enabled for net-mail/notmuch.

  29 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org>
  afew-aidecoe-9999.ebuild:
  Block mail-filter/afew.

*afew-aidecoe-9999 (29 May 2012)

  29 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org>
  +afew-aidecoe-9999.ebuild, +metadata.xml:
  Copied from mail-filter/afew and changed URI-s.
