@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-EBUILD afew-aidecoe-9999.ebuild 931 RMD160 270ed729011beba5d2c47305a13aafbe41d6c59c SHA1 470c0f798db9c1567e70ba89d0b561d91d51ad7a SHA256 de2d1bd322b25c92231b0823441e577bb16fcd916f6854b2743ac066c119db07
-MISC ChangeLog 563 RMD160 2de2926e300aa930a02b695f7e1f495fa55e8ca3 SHA1 4c44bf50a465fc0d2a83785500c61d4ec36cfd08 SHA256 07729eb501d4a925f97aa88f22410c2ab80554c05fe6e762ff898d597edea90d
-MISC metadata.xml 932 RMD160 f666e863607c32e28603c14c48643581c551cc64 SHA1 09fa5a98a200c058b8e2ef22102b1b9a1c1305e4 SHA256 5f395d10983f879cf7e0301500fdbeb491b93dc46766155ca7a96ab2fa9ca78c
+EBUILD afew-aidecoe-9999.ebuild 898 SHA256 fa028725530bf71977e5b4effd74e960b05648e4fc4b6effbd624682f547c499 SHA512 7e3ed57464eed17e0d24e38f145bfa1e868dbb7d5944237a4dc10e9719d49c09d315123b043bdc0d8ebfd6469d0b60834f46f8a7223fe969d77e35307f7a7743 WHIRLPOOL e8feb5faedfb99eab8f2c3a9e54bd18aed1774591a91cfac1779f5b05c5e267a4018b2225522b69541eafb1a0d88bb620e652907599d58a6e54adedcf321c197
+MISC ChangeLog 684 SHA256 1a521e2bf31ccb341d749be790e74b684cb6eef67e8eb6fbf1cf71014a4e2ad7 SHA512 08f1c697a917043a84e7527fd0661c78ddac1c927a2893d5bd2492160a113c992e46f80ecc1edea983e25744828dfcb50bfc4f9b9feb1379ab3763f64543c9e9 WHIRLPOOL 2215dabb24ebaf0d3454a5ceb2604b869bf8ec4d6a5912d1e846e569e49e4eff65eb7a578ffc09b5d89e6356c96e4500d459d781ecf6520cfdcc3947cc3648b7
+MISC metadata.xml 932 SHA256 5f395d10983f879cf7e0301500fdbeb491b93dc46766155ca7a96ab2fa9ca78c SHA512 061227bce77ee4c12e7090719b540fa65a60cefdf8a6dfa7ba155229811631136344c4d4dce63c0c144c69c889d22ad82a08a274a2e8990973c104aa825a9087 WHIRLPOOL ac13bd1c9694144f6e61f0803a054e96589f82e45080c3072aaf61442a9e9c3cf7e7a891e7b7fcfb36a18b6ed573ecccfc8a6a84b54485c06bad6cb09c444161
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPxMhQAAoJEPATRTHh2/q1l2UH/3MLA3xYUK1Q6ILNmLeDP5/m
-Shva6A2ID/FnQ92dynVRB+D6Rh4iW00EGL00l1nU3hiV1Jyv4LHqdfwJdc39GBb9
-S0wJ2YmyBifLdeSWbn7Z4QahlD1/0W3UhKjkpSAlhZb3h0kjIWRY0WLseEdQCZOu
-saoV/Kbd7fvSa/cQAhKSFhfE86wuh9bbmizgo/d9eXEbtWvll8i4J6JsCNEBNDNw
-M1sy3YWwS/B/YKAARZ7GxJBy/+I5AaGeM4KjQ5KTm0CTh75uWmbN0VZMu49KRd42
-Arftf6mb24/3i736Sbqsi/LtUwCLc0RZYHJgGphhRTXpYKPIfp3P0JJZC8bxYqw=
-=cNyn
+iQEcBAEBCAAGBQJRgiWzAAoJEPATRTHh2/q1zb8IAJYaX02vh6wSJlchH3vRKfel
+1FY3CNJ7VnY7nwK+2JAxkMDAbJv8pjgIiz7Y1O8+IpSrgOb50WcqXcpcU/Fo/Rrv
+0ciPKNewyt3aSQH/sQd8scJBHRJN1czfSR1YQjIV58+cG8YNuvzLg6O6kohKHG3A
+EdU2swfjL1anzzDydjLa0Qth2Iw4zKBIgu+ccapXKI1PjKcx7WdevL7nombg0fAO
+DWzvQ54ExnZIUt2kY9qSxX1zy2YhcfGohxhYdeuq7tyuWuvX/VwC+aGDBQhVd6/F
+JuVHae/N5E0r/5zJ37Lm/V3LiSlTJVAhpkFPpXtWCfaOXzj8LCg+U9QHdRK1lys=
+=0d+R
 -----END PGP SIGNATURE-----
