@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/afew-aidecoe
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 May 2013; Amadeusz Żołnowski <aidecoe@gentoo.org>
+  afew-aidecoe-9999.ebuild:
+  Sync with mail-filter/afew-9999.
 
   29 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org>
   afew-aidecoe-9999.ebuild:
